--- a/index.html
+++ b/index.html
@@ -17,23 +17,23 @@
     <!--navbar-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">Michael Seneca</a>
+        <a class="navbar-brand text-uppercase" href="index.html"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link px-4" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
+              <a class="nav-link px-4" href="#">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Portfolio</a>
+              <a class="nav-link px-4" href="#">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Contact</a>
+              <a class="nav-link px-4" href="#">Contact</a>
             </li>
             </li>
           </ul>
@@ -41,13 +41,19 @@
       </div>
     </nav>
 
-    <!--Intro-->
-    <div class="container position-relative" id="about">
+    <!--About-->
+    <div class="container-fluid position-relative" id="about">
        <div class="row">
-         <div class="col-12 col-md-6 d-flex flex-column justify-content-center align-middle vh-100">
-             <p class="title">Web Developer</p>
-             <h1 class="name text-white">Michael Seneca</h1>
-             <a href="#" class="btn btn-info feature-btn mt-3">Portfolio</a>
+         <div class="intro col-xs-12 d-flex vh-100 d-flex justify-content-center justify-content-md-start">
+           <div class="about-content">
+             <h1 class="name display-1 text-white text-center text-md-start">Michael Seneca</h1>
+             <h4 class="pro-title text-center text-md-start text-uppercase">Web Developer</h4>
+             <div class="skill-logos d-flex justify-content-center justify-content-md-start pt-3">
+               <img class="logo me-2" src="./images/html5-brands.png">
+               <img class="logo me-2" src="./images/css3-alt-brands.png">
+               <img class="logo" src="./images/bootstrap-brands.png">
+            </div>
+          </div>
          </div>
        </div>
      </div>
