Completed Contact section

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <title>Michael Seneca's Portfolio</title>
   </head>
   <body>
-    <!--background-container-->
+    <!--Background-->
     <div class="bg-image" style="background-image: url('./images/nihon-graphy-XHRVrLYTBBs-unsplash.jpg');
     height: 100vh">
     </div>
 
-    <!--navbar-->
+    <!--Navbar-->
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
       <div class="container-fluid">
         <a class="navbar-brand text-uppercase" href="index.html"></a>
@@ -69,7 +69,7 @@
                 <a href="https://polite-sundae-7e07ff.netlify.app"><img class="card-img-top" src="./images/port-apple.jpg" alt="Apple Clone"></a>
                 <div class="card-body">
                   <h5 class="card-title">Apple Clone</h5>
-                  <p class="card-text">Altcademy HTML/CSS Development Course Assignment.</p>
+                  <p class="card-text">Altcademy Assignment (HTML/CSS)</p>
                 </div>
               </div>
             </div>
@@ -78,7 +78,7 @@
               <a href="https://bright-lokum-fbc8dc.netlify.app"><img class="card-img-top" src="./images/port-newsweek.jpg" alt="Newsweek Clone"></a>
               <div class="card-body">
                 <h5 class="card-title">Newsweek Clone</h5>
-                <p class="card-text">Altcademy HTML/CSS Development Course Assignment.</p>
+                <p class="card-text">Altcademy Assignment (HTML/CSS)</p>
               </div>
             </div>
           </div>
@@ -87,7 +87,36 @@
               <a href="https://singular-manatee-c194e4.netlify.app"><img class="card-img-top" src="./images/port-airbnb.jpg" alt="Airbnb Clone"></a>
               <div class="card-body">
                 <h5 class="card-title">Airbnb Clone</h5>
-                <p class="card-text">Altcademy HTML/CSS Development Course Assignment.</p>
+                <p class="card-text">Altcademy Assignment (HTML/CSS/Bootstrap)</p>
+              </div>
+            </div>
+          </div>
+        </div>
+          <div class="row">
+            <div class="col-12 col-md-4 px-md-4">
+              <div class="card border-secondary mt-3 mb-5">
+                <a href="https://polite-sundae-7e07ff.netlify.app"><img class="card-img-top" src="./images/port-apple.jpg" alt="Apple Clone"></a>
+                <div class="card-body">
+                  <h5 class="card-title">Apple Clone</h5>
+                  <p class="card-text">Altcademy Assignment (HTML/CSS)</p>
+                </div>
+              </div>
+            </div>
+          <div class="col-12 col-md-4 px-md-4">
+            <div class="card border-0 mt-3 mb-5">
+              <a href="https://bright-lokum-fbc8dc.netlify.app"><img class="card-img-top" src="./images/port-newsweek.jpg" alt="Newsweek Clone"></a>
+              <div class="card-body">
+                <h5 class="card-title">Newsweek Clone</h5>
+                <p class="card-text">Altcademy Assignment (HTML/CSS)</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-12 col-md-4 px-md-4">
+            <div class="card border-0 mt-3 mb-5">
+              <a href="https://singular-manatee-c194e4.netlify.app"><img class="card-img-top" src="./images/port-airbnb.jpg" alt="Airbnb Clone"></a>
+              <div class="card-body">
+                <h5 class="card-title">Airbnb Clone</h5>
+                <p class="card-text">Altcademy Assignment (HTML/CSS/Bootstrap)</p>
               </div>
             </div>
           </div>
@@ -100,23 +129,35 @@
       <div class="container-fluid position-relative" id="contact">
         <div class="row">
           <div class="col-12 d-flex justify-content-center">
-            <div class="contact-form my-5">
-              <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Name</label>
+            <div class="contact-container justify-content-center rounded p-3 mt-5">
+              <h3 class="contact-title text-center">Contact</h3>
+              <div class="contact-form my-5">
+                <div class="form-floating mb-3">
+                  <input type="text" class="form-control" id="floating-input" placeholder="name@example.com">
+                  <label for="floatingInput">Name</label>
+                </div>
+                <div class="form-floating mb-3">
+                  <input type="email" class="form-control" id="floating-input" placeholder="name@example.com">
+                  <label for="floatingInput">Email Address</label>
+                </div>
+                <div class="form-floating">
+                  <input type="text" class="form-control" id="floating-input-comments" placeholder="Message">
+                  <label for="floatingPassword">Message</label>
+                </div>
               </div>
-              <div class="form-floating mb-3">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email Address</label>
-              </div>
-              <div class="form-floating">
-                <input type="text" class="form-control" id="floatingPassword" placeholder="Message">
-                <label for="floatingPassword">Message</label>
-              </div>
+            </div>
           </div>
         </div>
-      </div>
 
+      <!--Footer-->
+      <footer>
+        <div class="container-fluid position-relative" id="footer">
+          <div class="row">
+            <div class="col-12 d-flex justify-content-center">
+              
+
+
+      </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
