--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <!--About-->
     <div class="container-fluid position-relative" id="about">
        <div class="row">
-         <div class="intro col-xs-12 d-flex vh-100 d-flex justify-content-center justify-content-md-start">
+         <div class="intro col-xs-12 d-flex vh-100 justify-content-center justify-content-md-start">
            <div class="about-content">
              <h1 class="name display-1 text-white text-center text-md-start">Michael Seneca</h1>
              <h4 class="pro-title text-center text-md-start text-uppercase">Web Developer</h4>
@@ -150,14 +150,25 @@
         </div>
 
       <!--Footer-->
-      <footer>
+      <footer class="mt-5">
         <div class="container-fluid position-relative" id="footer">
           <div class="row">
-            <div class="col-12 d-flex justify-content-center">
-              
-
-
+            <div class="col-12">
+              <div class="footer-content p-5">
+                <div class="footer-logos d-flex p-3 justify-content-center">
+                  <a href="https://github.com/MikeJSen"><img class="logo me-4" src="./images/github-brands.png" alt="github logo"></a>
+                  <a href="#"><img class="logo me-4" src="./images/linkedin-brands.png" alt="linkedin logo"></a>
+                </div>
+                <div class="text-center">
+                  <p class="pt-2">© Copyright 2022 Michael Seneca</p>
+                  <a class="pt-2 footer-link" href="https://www.altcademy.com/">Part of Altcademy's Fullstack Program</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </footer>
+      
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
   </body>
